--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/node": "^20.8.2",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/eslint-config-typescript": "^12.0.0",
